; ModuleID = '/home/carl/AnghaBench/linux/net/smc/extr_smc_pnet.c_smc_pnet_net_init.c'
source_filename = "/home/carl/AnghaBench/linux/net/smc/extr_smc_pnet.c_smc_pnet_net_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }
%struct.smc_net = type { %struct.smc_pnettable }
%struct.smc_pnettable = type { i32, i32 }

@smc_net_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smc_pnet_net_init(%struct.net* %0) #0 {
  %2 = alloca %struct.net*, align 8
  %3 = alloca %struct.smc_net*, align 8
  %4 = alloca %struct.smc_pnettable*, align 8
  store %struct.net* %0, %struct.net** %2, align 8
  %5 = load %struct.net*, %struct.net** %2, align 8
  %6 = load i32, i32* @smc_net_id, align 4
  %7 = call %struct.smc_net* @net_generic(%struct.net* %5, i32 %6)
  store %struct.smc_net* %7, %struct.smc_net** %3, align 8
  %8 = load %struct.smc_net*, %struct.smc_net** %3, align 8
  %9 = getelementptr inbounds %struct.smc_net, %struct.smc_net* %8, i32 0, i32 0
  store %struct.smc_pnettable* %9, %struct.smc_pnettable** %4, align 8
  %10 = load %struct.smc_pnettable*, %struct.smc_pnettable** %4, align 8
  %11 = getelementptr inbounds %struct.smc_pnettable, %struct.smc_pnettable* %10, i32 0, i32 1
  %12 = call i32 @INIT_LIST_HEAD(i32* %11)
  %13 = load %struct.smc_pnettable*, %struct.smc_pnettable** %4, align 8
  %14 = getelementptr inbounds %struct.smc_pnettable, %struct.smc_pnettable* %13, i32 0, i32 0
  %15 = call i32 @rwlock_init(i32* %14)
  ret i32 0
}

declare dso_local %struct.smc_net* @net_generic(%struct.net*, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @rwlock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
